# opengl-starter

./: meson.build  readme.md  test.sh
src/: controller.cc  controller.hh  main.cc  renderer.cc  renderer.hh
